Refactor database context and configure SQLite support
Move `AppDbContext` to `DinnerSpinner.Api.Data` namespace and add `DbSet` properties for `Category` and `Dish`
Add SQLite connection string to `appsettings.json`
Update `DinnerSpinner.Api.csproj` to include `Microsoft.EntityFrameworkCore.Sqlite` and `Microsoft.EntityFrameworkCore.Tools`
Configure `Program.cs` to use `AppDbContext` with SQLite; remove demo weather forecast endpoint.
Create initial migration files for `Categories` and `Dishes` tables
Generate `AppDbContextModelSnapshot.cs` to represent the current model state
Remove redundant `Microsoft.EntityFrameworkCore` package reference from `DinnerSpinner.csproj`

--- a/DinnerSpinner.Api/appsettings.json
+++ b/DinnerSpinner.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Data/dinnerspinner.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
