--- a/DinnerSpinner/appsettings.json
+++ b/DinnerSpinner/appsettings.json
@@ -1,12 +1,10 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Data/dinnerspinner.db"
-  },
+  "ApiBaseUrl": "https://menominee-api.azurewebsites.net/",
   "Logging": {
     "LogLevel": {
-      "Microsoft.AspNetCore": "Error",
+      "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "ApiName": "dinner-spinner-api",
