Rename  DinnerSpinner project to  DinnerSpinner.Client

--- a/DinnerSpinner.Api/DinnerSpinner.Api.csproj
+++ b/DinnerSpinner.Api/DinnerSpinner.Api.csproj
@@ -17,7 +17,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\DinnerSpinner\DinnerSpinner.csproj" />
+	  <ProjectReference Include="..\DinnerSpinner\DinnerSpinner.Client.csproj" />
 	</ItemGroup>
 
 </Project>
