--- a/DinnerSpinner.Api/DinnerSpinner.Api.csproj
+++ b/DinnerSpinner.Api/DinnerSpinner.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CSharpFunctionalExtensions" Version="3.6.0" />
 		<PackageReference Include="FastEndpoints" Version="7.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.19" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.19" />
@@ -18,6 +19,10 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\DinnerSpinner\DinnerSpinner.Client.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Features\Dishes\Delete\" />
 	</ItemGroup>
 
 </Project>
