--- a/DinnerSpinner.Api/DinnerSpinner.Api.csproj
+++ b/DinnerSpinner.Api/DinnerSpinner.Api.csproj
@@ -18,7 +18,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\DinnerSpinner\DinnerSpinner.Client.csproj" />
+	  <ProjectReference Include="..\DinnerSpinner.Client\DinnerSpinner.Client.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
