Add containerized Claude Code CLI with safe-by-default configuration
- Add Dockerfile and docker-compose configuration for running Claude Code in a container
- Use read-only bind mount by default to protect the working tree
- Provide explicit opt-in profile for read-write access
- Persist Claude auth/config in a dedicated Docker volume
- Support Windows + WSL workflows with UID/GID alignment
Add .env to .gitignore
"Introduce explicit Dish contract and compose dish endpoint responses"
Add logo generated by chat Jippity

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,6 @@ FodyWeavers.xsd
 
 # REST Client HTTP files - developer-specific requests
 *.http
+
+# Local Docker Compose overrides (do not commit)
+.env
