Move domain classes to their own Class Library project Add domain base classes for entities and Value objects

--- a/DinnerSpinner.Api/DinnerSpinner.Api.csproj
+++ b/DinnerSpinner.Api/DinnerSpinner.Api.csproj
@@ -18,7 +18,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\DinnerSpinner.Client\DinnerSpinner.Client.csproj" />
+	  <ProjectReference Include="..\DinnerSpinner.Domain\DinnerSpinner.Domain.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
