Refactor request/response classes to use records, enhance null handling, and update API base URL

--- a/DinnerSpinner.Client/appsettings.json
+++ b/DinnerSpinner.Client/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ApiBaseUrl": "https://menominee-api.azurewebsites.net/",
+  "ApiBaseUrl": "https://dinnerspinner-api.azurewebsites.net/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
